# AdventOfCode

2022/day2/: index.js
2022/day3/: index.js
2022/day4/: index.js
2022/rust-solutions/: Cargo.toml
2022/rust-solutions/src/day01/: main.rs
2022/rust-solutions/src/day07/: main.rs
2022/rust-solutions/src/day08/: main.rs
